tests/fixtures/invalid/bytes_div_set.py
# Cannot divide Bytes and Set[int]
x: float = b"hello" / {1, 2, 3}
